# Clinic-AI---v2.0.0

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  Dockerfile.api  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml
.ai/: REPORT_TEMPLATE.md  TASK_TEMPLATE.md
.ai/worklog/: 20260522.md
.github/workflows/: ci.yml
_audit/: DATA_GAP_REPORT.md
context/: CURRENT_PROGRESS.md  SYSTEM_STATE_ACTUAL.md  notion_schema_report.md  notion_sync_report.md
docker/rabbitmq/: README.md  definitions.json  rabbitmq.conf
docs/: Hướng dẫn test Dashboard.md  lab_triage_spec_v1.md
feedback/: Feedback ClinicAi 375ccb0eac8880aead57f90f1e4c5c55.html
final_canon/: 00_SYSTEM_OVERVIEW_AND_FINAL_ARCHITECTURE.md  01_IMPLEMENTATION_ROADMAP_AND_TASKS.md  02_CODING_RULES.md  03_TASK_DELEGATION_RULES.md  04_MULTI_AI_WORKING_MODEL.md  05_DATABASE_DESIGN_FINAL.md  06_HARD_DECISIONS_AND_STYLE.md  07_CONTEXT_AND_MEMORY_RULES.md  08_END_TO_END_SYSTEM_DESIGN.md  09_CLAUDE_AND_AGENT_INSTRUCTIONS.md  10_RESEARCH_AND_BENCHMARK_2026-05-20.md  11_REVIEW_AGENDA_FOR_HUMAN.md
scripts/: apply_migrations.py  check_rabbitmq.py  commit_bundle.sh  rollback_migrations.py
scripts/data_audit/: profile.py
scripts/data_import/: csv_to_sources.py  inspect_notion_schema.py  load_to_staging.py  notion_to_sources.py  sync_to_supabase.py
scripts/data_migration/: transform.py
scripts/demo/: demo_route_scheduling.py
scripts/maintenance/: apply_039_042_blank_db.sql  clear_work_roster.sql  reset_clinical_data.sql
scripts/scheduler/: PREVISIT_TRIGGER_GAP.md
scripts/seed/: build_seeds_from_notion.py  demo_seed.py  link_staff_to_auth.py  sample_from_csv.py
src/clinicai/: main.py
src/dashboard/: .dockerignore  Dockerfile.dashboard  README.md  next.config.ts  package-lock.json  proxy.ts
src/migrations/: .gitkeep  20260520_001_create_clinic_location.down.sql  20260520_001_create_clinic_location.sql  20260520_002_create_service_type.down.sql  20260520_002_create_service_type.sql  20260520_003_create_staff.down.sql  20260520_003_create_staff.sql  20260520_004_create_patient.down.sql  20260520_004_create_patient.sql  20260520_005_create_mpi_merge_queue.down.sql  20260520_005_create_mpi_merge_queue.sql  20260520_006_create_patient_medical_profile.down.sql  20260520_006_create_patient_medical_profile.sql  20260520_007_create_pregnancy.down.sql  20260520_007_create_pregnancy.sql  20260520_008_create_staff.down.sql  20260520_008_create_staff.sql  20260520_009_create_work_session.down.sql  20260520_009_create_work_session.sql  20260520_010_create_work_session_staff.down.sql  20260520_010_create_work_session_staff.sql  20260520_011_create_appointment.down.sql  20260520_011_create_appointment.sql  20260520_012_appointment_slot_exclusion.down.sql  20260520_012_appointment_slot_exclusion.sql  20260520_013_create_event_log.down.sql  20260520_013_create_event_log.sql  20260520_014_event_log_add_published.down.sql  20260520_014_event_log_add_published.sql  20260521_015_create_lab_result.down.sql  20260521_015_create_lab_result.sql  20260521_016_create_staff_task.down.sql  20260521_016_create_staff_task.sql  20260522_017_create_clinical_domain.down.sql  20260522_017_create_clinical_domain.sql  20260522_018_create_ultrasound_and_summary.down.sql  (+51 more)
(+288 files in other folders)
