[project]
name = "clinicai"
version = "0.1.0"
description = "ClinicAI - Dr4women"
authors = [
    {name = "Dr4women Team"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (==0.115.12)",
    "uvicorn[standard] (==0.34.3)",
    "pydantic (==2.11.4)",
    "pydantic-settings (==2.9.1)",
    "supabase (==2.15.2)",
    "asyncpg (==0.30.0)",
    "sqlalchemy (==2.0.41)",
    "langgraph (>=0.6.0,<0.7.0)",
    "langchain-anthropic (==0.3.14)",
    "anthropic (==0.52.0)",
    "aio-pika (==9.5.5)",
    "structlog (==25.3.0)",
    "python-dotenv (==1.1.0)",
    "langchain-core (>=0.3.0,<0.4.0)",
    "langgraph-checkpoint-postgres (>=2.0.0,<3.0.0)",
    "psycopg[binary,pool] (>=3.1.0,<4.0.0)",
    "tenacity (>=8.2.0,<10.0.0)"
]


[tool.poetry]
packages = [{ include = "clinicai", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (==8.3.5)",
    "pytest-asyncio (==0.26.0)",
    "pytest-cov (==6.1.0)",
    "httpx (==0.28.1)",
    "ruff (==0.11.10)",
    "mypy (==1.15.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "notion-client (>=3.1.0,<4.0.0)"
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# Vercel FastAPI entrypoint. Vercel's detector found 8 files with an `app`
# variable (main.py + 7 test files) and couldn't pick one — this names the real
# one. Format is module:variable, suggested verbatim by Vercel's build error.
#
# FALLBACK: if the deploy then fails with `ModuleNotFoundError: No module named
# 'clinicai'`, it means Vercel installed the package top-level (like Dockerfile.api
# does) — change this to `clinicai.main:app`. The codebase imports `clinicai.*`,
# so only one of the two will resolve depending on how Vercel sets sys.path.
[tool.vercel]
entrypoint = "src.clinicai.main:app"
